# tap-universal-file

./: .gitignore  README.md  meltano.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: constraints.txt  main_test.yml  review_approve.yml  s3_test.yml  test.yml
tap_file/: __init__.py  client.py  files.py  streams.py  tap.py
tap_universal_file/: client.py  files.py  streams.py  tap.py
tap_unniversal_file/: client.py  files.py  streams.py  tap.py
tests/: __init__.py  conftest.py  test_core.py
tests/data/: athletes.avro  birds.jsonl  cats.csv  employees.jsonl  fruit_records.csv  fruit_records.csv.bz2  fruit_records.csv.lzma  fruit_records.csv.xz  malformed_employees.jsonl  new_hardware.csv  old_hardware.csv  racing.parquet  small_fruit.csv
tests/data/heart_partition/partition=3/: df8b26ffedf345b1b677d65add8645f2-0.parquet
tests/data/heart_partition/partition=4/: df8b26ffedf345b1b677d65add8645f2-0.parquet
tests/data/heart_partition/partition=5/: df8b26ffedf345b1b677d65add8645f2-0.parquet
tests/data/heart_partition/partition=6/: df8b26ffedf345b1b677d65add8645f2-0.parquet
tests/data/heart_partition/partition=7/: df8b26ffedf345b1b677d65add8645f2-0.parquet
tests/data/heart_partition/partition=8/: df8b26ffedf345b1b677d65add8645f2-0.parquet
