[tool.poetry]
name = "tap-universal-file"
version = "0.0.1"
description = "`tap-universal-file` is a Singer tap for File, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Meltano"]
keywords = [
    "ELT",
    "File",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
singer-sdk = { version="^0.28.0" }
fsspec = "^2023.5.0"
s3fs = { version = "^2023.5.0", optional = true}
fs-s3fs = { version = "^1.1.1", optional = true}
avro = "^1.11.2"

[tool.poetry.extras]
s3=["s3fs", "fs-s3fs"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
ruff = "^0.0.270"
black = "^23.3.0"
singer-sdk = { version="^0.28.0", extras = ["testing"] }

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "TD", # TODO violations
]
select = ["ALL"]
src = ["tap_universal_file"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_universal_file"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-universal-file = 'tap_universal_file.tap:TapUniversalFile.cli'
